Always show vertical scroll bar

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
-  <body class="bg-gray-50" data-sveltekit-preload-data="hover">
+  <body
+    class="overflow-y-scroll bg-gray-50"
+    data-sveltekit-preload-data="hover"
+  >
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
